# Charybdis

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .pre-commit-config.yaml  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  conanfile.py  justfile  pixi.toml  pyproject.toml  renovate.json  tsan.supp
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/conan-install/: action.yml
.github/workflows/: _required.yml  build-test.yml  code-coverage.yml  codeql.yml  container.yml  integration-tests.yml  lock-check.yml  merge-queue-smoke.yml  release.yml  ruleset-audit.yml  sanitizers.yml  static-analysis.yml
cmake/: SourcesAndHeaders.cmake
configs/github/: merge-queue-policy.json
docs/: static-analysis.md
docs/ci/: merge-queue.md
include/charybdis/: chaos_audit.hpp  http_test_client.hpp
include/projectcharybdis/: chaos_audit.hpp  http_test_client.hpp  test_helpers.hpp  version.hpp.in
scripts/: apply-branch-protection.sh  check-version-sync.sh  lint.sh  lock.sh  mock-agamemnon.py  test-merge-queue-policy.py
src/: http_test_client.cpp  main.cpp
test/: .clang-tidy  CMakeLists.txt
test/src/: test_chaos_api.cpp  test_chaos_audit_unit.cpp  test_chaos_resilience.cpp  test_helpers_unit.cpp  test_http_client_retry_unit.cpp  test_http_client_unit.cpp  test_malformed_messages.cpp  test_payload_fuzzing.cpp  test_protocol_correctness.cpp
