[project]
name = "charybdis"
version = "0.1.0"
description = "Chaos and resilience testing for HomericIntelligence"
# Charybdis ships no importable Python package: this manifest exists solely to
# manage the C++ build toolchain (CMake/Ninja/Conan/gcovr/pre-commit) as locked
# PyPI wheels via uv (Odysseus ADR-018, mirroring Agamemnon #457). The C++
# compiler and clang-tools/OpenSSL/libcurl dev headers come from the system
# (apt), not from here. `requires-python` matches the conda-forge Python that
# the old pixi env resolved (>=3.10 covers every toolchain wheel below).
requires-python = ">=3.10"

# Build-toolchain-only project: no runtime dependencies to import.
dependencies = []

[dependency-groups]
# Dev toolchain formerly declared in pixi.toml [dependencies]. Every entry has
# a manylinux PyPI wheel, so `uv sync --locked` installs them with no compiler.
# Version floors preserve the pixi lower bounds:
#   cmake >=3.20, ninja >=1.11, conan >=2.0, gcovr >=7, pre-commit >=3.
# `cxx-compiler` and `clang-tools` (clang-tidy/clang-format) are NOT here —
# they are provided by the system toolchain (apt / devcontainer), per ADR-018.
dev = [
    "cmake>=3.20",
    "ninja>=1.11",
    "conan>=2.0",
    "gcovr>=7",
    "pre-commit>=3",
]

[tool.uv]
# Install the dev group by default so `uv sync` (no flags) provisions the full
# build toolchain, matching the former single-environment pixi behavior.
default-groups = ["dev"]
